Fix overlapping sections of: HomeLoans & QuickLinks on homepage

--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -37,4 +37,5 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0px 16px;
 }
